--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <hr>
     <h1>Image Showcase</h1>
     <p>Here are Some Sample Images</p>
-    <img src="./images/ (1).jpeg" width="500"><br>
-    <img src="./images/" width="500"><br>
-    <img src="./images/" width="500">
+    <img src="./images/images (1).jpeg" width="500"><br>
+    <img src="./images/images.jpeg" width="500"><br>
+    <img src="./images/photo-1515879218367-8466d910aaa4.jpeg" width="500">
 </body>
 
 </html>
